WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72040
Fix sampling counters on ARMv7, move add64 functionality to macro assembler
https://bugs.webkit.org/show_bug.cgi?id=72040
Summary
Fix sampling counters on ARMv7, move add64 functionality to macro assembler
Gavin Barraclough
Reported
2011-11-10 12:16:43 PST
The ability to add an integer to a uint64_t in memory is poorly copied in multiple places & ifdef'ed on architecture, addWithCarry32 is also a badly designed interface since add32 is not required to set flags (we have no concept of flags in the macro assembler interface).
Attachments
Fix
(9.41 KB, patch)
2011-11-10 12:18 PST
,
Gavin Barraclough
ggaren
: review+
barraclough
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2011-11-10 12:18:37 PST
Created
attachment 114540
[details]
Fix
Geoffrey Garen
Comment 2
2011-11-10 12:21:52 PST
Comment on
attachment 114540
[details]
Fix r=me
Gavin Barraclough
Comment 3
2011-11-10 12:24:28 PST
Fixed in
r99888
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug